--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "edgemony-movie-db",
   "version": "0.1.0",
-  "homepage" : "https://carmelofileccia.github.io/edgemony-movie-db/"
+  "homepage" : "https://carmelofileccia.github.io/edgemony-movie-db/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
